# riscv-cpu

./: README.md  spike.cfg  spike.lds
docs/: hw-riscv32i-basis.md  sw-code-guide.md  sw-code-op.md  sw-env-setup.md
hw/: README.md
hw/ips/fde_ip/: README.md  fde_core.cpp  fde_core.hpp  fde_dbg.hpp  fde_decode.cpp  fde_decode.hpp  fde_disasm.cpp  fde_disasm.hpp  fde_emul.cpp  fde_emul.hpp  fde_ip.cpp  (+12 more)
sw/: README.md
sw/simics/riscv-vp/modules/riscv-cpu/: CMakeLists.txt  Makefile  dmem-iface-impl.cpp  exec-iface-impl.cc  exec-iface-impl.cpp  module_load.py  proc-cli-iface-impl.cpp  proc-iface-impl.cpp  reg-iface-impl.cpp  riscv-cpu-cycle.cpp  riscv-cpu-decode.cpp  riscv-cpu-disasm.cpp  riscv-cpu-encode.cpp  riscv-cpu-queue.cpp  riscv-cpu-reg-iface-impl.cc  riscv-cpu-types.cpp  riscv-cpu.cc  riscv-cpu.cpp  step-iface-impl.cpp
sw/simics/riscv-vp/modules/riscv-cpu/ifaces/: cycle-iface-impl.cpp  dmem-iface-impl.cpp  exec-iface-impl.cpp  freq-iface-impl.cpp  proc-cli-iface-impl.cpp  proc-iface-impl.cpp  reg-iface-impl.cpp  step-iface-impl.cpp
sw/simics/riscv-vp/modules/riscv-cpu/include/: dmem-iface-impl.hpp  exec-iface-impl.hpp  proc-iface-impl.hpp  reg-iface-impl.hpp  riscv-cpu-conf.hpp  riscv-cpu-cycle.hpp  riscv-cpu-decode.hpp  riscv-cpu-disasm.hpp  riscv-cpu-encode.hpp  riscv-cpu-queue.hpp  riscv-cpu-reg-iface-impl.hpp  riscv-cpu-state.hpp  riscv-cpu-types.hpp  riscv-cpu.hpp
sw/simics/riscv-vp/modules/riscv-cpu/test/: CMakeLists.txt  riscv_cpu_common.py  s-info-status.py  s-riscv-cpu.py
tests/: README.md  test_op_basic_math.c  test_op_imm.s  test_op_imm_0.elf
(+13 files in other folders)
